# Database

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: vectorComparing.h  zeroTrailing.h
src/: CMakeLists.txt
src/compiler/: query_exe_plan.cpp  result_set.cpp
src/main/: main.cpp
src/storageEngine/: columnDefs.cpp  database.cpp  storageEngine.cpp
test/storageEngineTests/: CMakeLists.txt  test.cpp
